fix: button font color on Safari

--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -17,11 +17,18 @@
         }
     }
     &__list-button {
-        all: unset;
+        background: $codgray;
+        color: $white;
+        border: 1px solid #fff;
+        border-left: none;
         width: 108px;
         height: 41px;
         cursor: pointer;
         text-align: center;
+        &:hover {
+          background: $white;
+          color: $codgray;
+      }
         @media #{$mobile} {
             width: 154px;
             height: 48px;
@@ -41,20 +48,10 @@
         font-weight: normal;
         font-size: 0.75rem;
         line-height: 1rem;
-        border-right: 1px solid #fff;
-        border-top: 1px solid #fff;
-        border-bottom: 1px solid #fff;
-        &:first-child {
-            border-left: 1px solid #fff;
-        }
         @media #{$mobile} {
             border: 1px solid #fff;
             width: 154px;
             height: 48px;
-        }
-        &:hover {
-            background: $white;
-            color: $codgray;
         }
     }
 }
